syntax = "proto3";

option csharp_namespace = "GrpcServer";

// Service 
service Customer {
	rpc GetCustomerInfo (CustomerLookupModel) returns (CustomerModel);

	// return LIST - Stream of customer model
	rpc GetNewCustomers (NewCustomerRequest) returns (stream CustomerModel);
}

// New customer Query
message NewCustomerRequest{

}

// Query Model
message CustomerLookupModel{
	int32 userId = 1;
}

// Return Model
message CustomerModel{
	string firstName = 1;
	string lastName = 2; 
	string emailAddress = 3;
	bool isAlive = 4;
	int32 age = 5;
}